tests/rosetta/out/Fortran/almost-prime.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program almost_prime
  implicit none
    integer :: nf
    integer :: i
    integer, allocatable, dimension(:) :: r
        integer, allocatable, dimension(:) :: app0
      character(len=100) :: s1
      character(len=100) :: s2
  call main()
  contains
  recursive logical function kPrime(n,k) result(res)
    integer, intent(in) :: n
    integer, intent(in) :: k
    nf = 0
    i = 2
    do while ((i <= n))
      do while ((mod(n,i) == 0))
        if ((nf == k)) then
          res = .false.
          return
        end if
        nf = (nf + 1)
        n = (n / i)
      end do
      i = (i + 1)
    end do
    res = (nf == k)
    return
  end function kPrime
  recursive integer function gen(k,count) result(res)
    integer, intent(in) :: k
    integer, intent(in) :: count
    allocate(r(0))
    n = 2
    do while ((size(r) < count))
      if (kPrime(n,k)) then
        if (allocated(app0)) deallocate(app0)
        allocate(app0(size(r)+1))
        app0(1:size(r)) = r
        app0(size(r)+1) = n
        r = app0
      end if
      n = (n + 1)
    end do
    res = r
    return
  end function gen
  recursive subroutine main()
    k = 1
    do while ((k <= 5))
      write(s1,'(G0)') k
      write(s2,'(G0)') gen(k,10)
      print *, trim(s1 // ' ') // s2
      k = (k + 1)
    end do
  end subroutine main
end program almost_prime
